<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_info_title">温馨提示</string>
    <string name="app_info">仿知乎日报客户端，仅供学习交流使用，请支持官方APP：http://daily.zhihu.com/。【@小胖吃饭了】</string>
    <string name="zhihu_url">http://daily.zhihu.com/</string>
    <string name="go_zhihu">下载官方APP</string>
    <string name="cancel">取消</string>

    <string name="app_name">知乎日报</string>

    <string name="action_message">消息提醒</string>
    <string name="action_night">夜间模式</string>
    <string name="action_settings">设置选项</string>
    <string name="action_share">分享</string>
    <string name="action_favorite">收藏</string>
    <string name="action_reply">评论</string>
    <string name="action_praise">点赞</string>
    <string name="action_save_pic">保存图片</string>

    <!-- 首页Drawer -->
    <string name="un_login">请登录</string>
    <string name="my_favorites">我的收藏</string>
    <string name="offline_download">离线下载</string>
    <string name="main_page">首页</string>

    <string name="theme_editor">主编</string>
    <string name="theme_editor_detail">主编资料</string>

    <!-- 评论详情 -->
    <string name="comment_title">%1$S条点评</string>
    <string name="long_comment_title">%1$d条长评</string>
    <string name="short_comment_title">%1$d条短评</string>
    <string name="long_comment_empty">深度长评虚位以待</string>
    <string name="likes_num">10</string>
    <string-array name="comment_options">
        <item>赞同</item>
        <item>举报</item>
        <item>复制</item>
        <item>回复</item>
    </string-array>

    <!-- Volley异常定义 -->
    <string name="no_internet">无网络连接，请检查您的手机网络~~~</string>
    <string name="server_down">连接服务器失败,请稍后再试~~~</string>
    <string name="server_error">网络异常,请稍后再试~~~</string>

</resources>
