<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 头部信息 -->
    <LinearLayout
        android:id="@+id/drawer_item_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/top_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.monosky.zhihudaily.view.roundedImageView.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/top_avatar"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:scaleType="fitXY"
                android:src="@mipmap/account_avatar"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/login_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/un_login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/top_favorites_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:src="@mipmap/favorites" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/my_favorites"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/top_download_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/download" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/offline_download"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- 中间信息 -->
    <LinearLayout
        android:id="@+id/drawer_item_middle_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/app_main_color"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:src="@mipmap/home" />

        <TextView
            android:id="@+id/middle_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/main_page"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

    <!-- 其他栏目 -->
    <RelativeLayout
        android:id="@+id/drawer_item_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="40dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp">

            <TextView
                android:id="@+id/bottom_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/main_page"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_16" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_img_layout"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/bottom_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/menu_follow" />
        </RelativeLayout>


    </RelativeLayout>
</LinearLayout>
