<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/comment_long_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/long_empty_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_main_color" />

            <TextView
                android:id="@+id/long_empty_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/app_name"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_14"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_main_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/long_empty_tip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/long_empty_layout"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="48dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/activity_vertical_margin"
                android:drawableTop="@mipmap/comment_empty"
                android:gravity="center_horizontal"
                android:text="@string/long_comment_empty"
                android:textColor="@color/divider_color"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/short_empty_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_main_color" />

            <TextView
                android:id="@+id/short_empty_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/app_name"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_14"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_main_color" />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/comment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/comment_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_main_color" />

            <TextView
                android:id="@+id/comment_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/app_name"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_14"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_main_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/comment_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.monosky.zhihudaily.view.roundedImageView.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/commenter_avatar"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="fitXY"
                        android:src="@mipmap/account_avatar"
                        app:riv_oval="true" />

                    <TextView
                        android:id="@+id/commenter_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_common_divide"
                        android:layout_marginTop="@dimen/activity_small_divide"
                        android:layout_weight="1"
                        android:text="@string/app_name"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/comment_likes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_small_divide"
                        android:drawableLeft="@mipmap/comment_vote"
                        android:drawablePadding="@dimen/activity_small_divide"
                        android:gravity="right"
                        android:text="@string/likes_num"
                        android:textColor="@color/divider_color"
                        android:textSize="@dimen/text_size_14" />
                </LinearLayout>

                <TextView
                    android:id="@+id/comment_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:text="@string/app_name"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/comment_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="@dimen/activity_large_divide"
                    android:text="@string/app_name"
                    android:textColor="@color/divider_color"
                    android:textSize="@dimen/text_size_12"
                    android:textStyle="normal" />
            </LinearLayout>

            <View
                android:id="@+id/comment_divide"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_main_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/comment_bottom_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/comment_bottom_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@mipmap/comment_icon_fold"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/app_name"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_14"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/app_main_color" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
